# preview

./: CMakeLists.txt  README.md
preview/concepts/: CMakeLists.txt  comparison.hpp  concepts.hpp  core.hpp  object.hpp
preview/concepts/single/: concepts.hpp
preview/iterator/: _iter_concept.hpp  _iterator_concepts.hpp  common_algorithm.hpp  default_sentinel_t.hpp  incrementable.hpp  incrementable_traits.hpp  indirect_callable_concepts.hpp  indirectly_readable.hpp  indirectly_readable_traits.hpp  indirectly_writable.hpp  iter_common_reference_t.hpp  iter_const_reference_t.hpp  iter_difference_t.hpp  iter_reference_t.hpp  iter_rvalue_reference_t.hpp  iter_value_t.hpp  iterator_base_types.hpp  iterator_concepts.hpp  iterator_traits.hpp  unreachable_sentinel_t.hpp  utilities.hpp
preview/iterator/single/: iterator_concepts.hpp
preview/meta/: compatible.hpp  meta.hpp
preview/predicate/: predicate.hpp
preview/ranges/: CMakeLists.txt  _decay_copy.hpp  _return_type.hpp  advance.hpp  begin.hpp  bidirectional_range.hpp  borrowed_iterator_t.hpp  borrowed_range.hpp  cbegin.hpp  cend.hpp  common_range.hpp  concepts.hpp  constant_range.hpp  contiguous_range.hpp  count.hpp  dangling.hpp  data.hpp  disable_sized_range.hpp  distance.hpp  empty.hpp  enable_borrowed_range.hpp  end.hpp  find.hpp  forward_range.hpp  input_range.hpp  invoke.hpp  iota.hpp  iter_move.hpp  output_range.hpp  predicate.hpp  random_access_range.hpp  range.hpp  range_primitives.hpp  ranges_initialized.hpp  rbegin.hpp  rend.hpp  size.hpp  sized_range.hpp  subrange.hpp  swap.hpp  (+1 more)
preview/ranges/test/: main.cpp  test_floating_point.cpp  test_integral.cpp  test_ranges_swap.cpp  test_regular.cpp  test_signed_integral.cpp
preview/test/: CMakeLists.txt
preview/test/algorithm/: swap.cpp
preview/test/concepts/: derivd_from.cpp
preview/test/iterator/: begin.cpp  cbegin.cpp  cend.cpp  end.cpp
preview/test/iterator_concepts/: bidi_iterator.cpp  contiguous_iterator.cpp  indirect_result.cpp  input_or_output_iterator.cpp  projected.cpp  random_iterator.cpp
preview/test/ranges/: advance.cpp  bidirectional_range.cpp  common_range.cpp  count.cpp  data.cpp  empty.cpp  find.cpp  forward_range.cpp  range.cpp  size.cpp  sized_range.cpp
preview/test/variant/: variant.cpp
preview/variant/: variant.hpp
